Bootstrapping via subnet + SOA (#194)
* Bootstrapping via subnet + SOA + SRV

---------

Co-authored-by: Tilmann Zäschke <tilmann.zaeschke@inf.ethz.ch>